# devterm-thermal-inventree-plugin

./: README.md  pyproject.toml
inventree_printer_plugin/: __init__.py  plugin.py
